--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -9,11 +9,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-18 17:04:22.441972: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-09-18 17:04:25.481827: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-09-18 17:04:25.483479: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-09-18 18:54:57.413309: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-09-18 18:55:00.448337: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-09-18 18:55:00.450800: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-09-18 17:04:30.454822: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2023-09-18 18:55:05.784148: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
        "[8 rows x 34 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "Name: pH_CAMPO, Length: 6162, dtype: float64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,34 +654,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#borrar los valores con ceros\n",
-    "data = data[data.iloc[:,31] != 0]\n"
+    "# Elimina registros vacíos solo en la columna 31\n",
+    "data_cleaned = data.dropna(subset=[data.columns[31]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(6162, 34)\n"
+      "(6162, 34)\n",
+      "(6067, 34)\n"
      ]
     }
    ],
    "source": [
-    "print (data.shape)"
+    "print (data.shape)\n",
+    "print (data_cleaned.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -689,44 +691,44 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 6162 entries, 0 to 6161\n",
+      "Index: 6067 entries, 0 to 6161\n",
       "Data columns (total 34 columns):\n",
       " #   Column         Non-Null Count  Dtype  \n",
       "---  ------         --------------  -----  \n",
-      " 0   CLOROF_A       2749 non-null   float64\n",
-      " 1   COLI_FEC       6066 non-null   float64\n",
-      " 2   COLI_TOT       3138 non-null   float64\n",
-      " 3   E_COLI         3994 non-null   float64\n",
-      " 4   COT            6089 non-null   float64\n",
-      " 5   COT_SOL        6013 non-null   float64\n",
-      " 6   DBO_SOL        3931 non-null   float64\n",
-      " 7   DBO_TOT        4007 non-null   float64\n",
-      " 8   DQO_SOL        3915 non-null   float64\n",
-      " 9   DQO_TOT        3995 non-null   float64\n",
-      " 10  N_NH3          6147 non-null   float64\n",
-      " 11  N_NO2          6153 non-null   float64\n",
-      " 12  N_NO3          6141 non-null   float64\n",
-      " 13  N_ORG          6141 non-null   float64\n",
-      " 14  N_TOT          6111 non-null   float64\n",
-      " 15  N_TOTK         6130 non-null   float64\n",
-      " 16  P_TOT          6111 non-null   float64\n",
-      " 17  ORTO_PO4       6109 non-null   float64\n",
-      " 18  COLOR_VER      6074 non-null   float64\n",
-      " 19  TRANSPARENCIA  2573 non-null   float64\n",
-      " 20  ABS_UV         5976 non-null   float64\n",
-      " 21  SDT            6049 non-null   float64\n",
-      " 22  SAAM           2716 non-null   float64\n",
-      " 23  SST            6138 non-null   float64\n",
-      " 24  TURBIEDAD      6141 non-null   float64\n",
-      " 25  TEMP_AMB       6063 non-null   float64\n",
-      " 26  PROFUNDIDAD    2380 non-null   float64\n",
-      " 27  CAUDAL         3076 non-null   float64\n",
-      " 28  DUR_TOT        3984 non-null   float64\n",
-      " 29  TEMP_AGUA      5941 non-null   float64\n",
-      " 30  CONDUC_CAMPO   6108 non-null   float64\n",
+      " 0   CLOROF_A       2662 non-null   float64\n",
+      " 1   COLI_FEC       5973 non-null   float64\n",
+      " 2   COLI_TOT       3136 non-null   float64\n",
+      " 3   E_COLI         3907 non-null   float64\n",
+      " 4   COT            5995 non-null   float64\n",
+      " 5   COT_SOL        5918 non-null   float64\n",
+      " 6   DBO_SOL        3843 non-null   float64\n",
+      " 7   DBO_TOT        3919 non-null   float64\n",
+      " 8   DQO_SOL        3827 non-null   float64\n",
+      " 9   DQO_TOT        3907 non-null   float64\n",
+      " 10  N_NH3          6052 non-null   float64\n",
+      " 11  N_NO2          6058 non-null   float64\n",
+      " 12  N_NO3          6046 non-null   float64\n",
+      " 13  N_ORG          6046 non-null   float64\n",
+      " 14  N_TOT          6016 non-null   float64\n",
+      " 15  N_TOTK         6035 non-null   float64\n",
+      " 16  P_TOT          6016 non-null   float64\n",
+      " 17  ORTO_PO4       6014 non-null   float64\n",
+      " 18  COLOR_VER      5979 non-null   float64\n",
+      " 19  TRANSPARENCIA  2485 non-null   float64\n",
+      " 20  ABS_UV         5881 non-null   float64\n",
+      " 21  SDT            5958 non-null   float64\n",
+      " 22  SAAM           2714 non-null   float64\n",
+      " 23  SST            6043 non-null   float64\n",
+      " 24  TURBIEDAD      6046 non-null   float64\n",
+      " 25  TEMP_AMB       5973 non-null   float64\n",
+      " 26  PROFUNDIDAD    2376 non-null   float64\n",
+      " 27  CAUDAL         3073 non-null   float64\n",
+      " 28  DUR_TOT        3896 non-null   float64\n",
+      " 29  TEMP_AGUA      5856 non-null   float64\n",
+      " 30  CONDUC_CAMPO   6017 non-null   float64\n",
       " 31  pH_CAMPO       6067 non-null   float64\n",
-      " 32  OD_%           5905 non-null   float64\n",
-      " 33  OD_mg/L        5912 non-null   float64\n",
+      " 32  OD_%           5898 non-null   float64\n",
+      " 33  OD_mg/L        5905 non-null   float64\n",
       "dtypes: float64(34)\n",
       "memory usage: 1.6 MB\n",
       "None\n"
@@ -734,7 +736,96 @@
     }
    ],
    "source": [
-    "print(data.info())"
+    "print(data_cleaned.info())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          CLOROF_A      COLI_FEC      COLI_TOT        E_COLI          COT  \\\n",
+      "count  2662.000000  5.973000e+03  3.136000e+03  3.907000e+03  5995.000000   \n",
+      "mean     14.155437  6.940546e+04  1.558436e+05  8.583112e+04     5.300618   \n",
+      "std      36.881750  9.843065e+05  1.529664e+06  1.034127e+06     8.765868   \n",
+      "min       0.100000  1.000000e+00  1.000000e+00  1.000000e+00     0.066000   \n",
+      "25%       0.100000  2.990000e+02  4.884000e+03  2.000000e+01     0.781550   \n",
+      "50%       4.893200  1.723000e+03  1.413600e+04  1.090000e+02     3.303000   \n",
+      "75%      13.779000  8.664000e+03  2.419600e+04  8.830000e+02     5.446050   \n",
+      "max     628.408000  2.419600e+07  2.419600e+07  2.419600e+07   148.748000   \n",
+      "\n",
+      "           COT_SOL      DBO_SOL      DBO_TOT      DQO_SOL      DQO_TOT  ...  \\\n",
+      "count  5918.000000  3843.000000  3919.000000  3827.000000  3907.000000  ...   \n",
+      "mean      4.068834     4.859556     9.627039    19.962865    42.251647  ...   \n",
+      "std       6.326571    13.322059    27.742349    32.999187    75.733153  ...   \n",
+      "min       0.063200     2.000000     2.000000    10.000000    10.000000  ...   \n",
+      "25%       0.424200     2.000000     2.000000    10.000000    10.000000  ...   \n",
+      "50%       2.792450     2.000000     2.000000    10.000000    19.500000  ...   \n",
+      "75%       4.534575     2.505000     5.020000    13.718000    38.165000  ...   \n",
+      "max     109.068000   315.950000   513.950000   562.800000  1849.200000  ...   \n",
+      "\n",
+      "         TURBIEDAD     TEMP_AMB  PROFUNDIDAD         CAUDAL      DUR_TOT  \\\n",
+      "count  6046.000000  5973.000000  2376.000000    3073.000000  3896.000000   \n",
+      "mean     31.208675    30.936582     7.010871   12818.365855   184.241848   \n",
+      "std      95.251381     3.995251    10.478745   45673.848475   218.190401   \n",
+      "min       0.200000     2.900000     0.000000       0.000000    22.650000   \n",
+      "25%       3.100000    28.000000     0.840000     414.800000    76.030000   \n",
+      "50%       7.500000    31.000000     2.000000    1670.000000   118.235000   \n",
+      "75%      23.000000    34.000000     8.332500    7629.900000   212.583250   \n",
+      "max    2300.000000    44.500000    40.000000  980000.000000  3622.996000   \n",
+      "\n",
+      "         TEMP_AGUA   CONDUC_CAMPO     pH_CAMPO         OD_%      OD_mg/L  \n",
+      "count  5856.000000    6017.000000  6067.000000  5898.000000  5905.000000  \n",
+      "mean     28.582555   19085.607373     8.109654    94.213886     7.159504  \n",
+      "std       3.622702   27633.763857     0.464756    30.427239     2.307670  \n",
+      "min      16.300000      26.300000     0.200000    10.000000     1.000000  \n",
+      "25%      25.900000     232.000000     7.805000    80.100000     6.040000  \n",
+      "50%      29.100000     775.000000     8.100000    95.900000     7.300000  \n",
+      "75%      31.500000   48000.000000     8.400000   108.700000     8.400000  \n",
+      "max      39.600000  148300.000000    10.000000   281.300000    21.660000  \n",
+      "\n",
+      "[8 rows x 34 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data_cleaned.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       8.20\n",
+       "1       7.97\n",
+       "2       8.02\n",
+       "3       8.05\n",
+       "4       8.27\n",
+       "        ... \n",
+       "6157    8.50\n",
+       "6158    8.20\n",
+       "6159    8.10\n",
+       "6160    8.10\n",
+       "6161    9.20\n",
+       "Name: pH_CAMPO, Length: 6067, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#seleccionar la columna numero 31 del dataset   \n",
+    "data_cleaned.iloc[:,31]"
    ]
   },
   {
