ResLimpieza de codigo funcionando

--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -1771,7 +1771,7 @@
     "    #Devuelve el MSE como aptitud (fitness) y el MAE (Error Absoluto Medio) como información adicional\n",
     "    return mse, np.mean(np.abs(y_test - y_pred))\n",
     "\n",
-    "\n",
+    "\"\"\"\n",
     "def es_individuo_valido(individual):\n",
     "    opciones = {\n",
     "        \"activacion\": ['relu', 'tanh', 'sigmoid'],\n",
@@ -1816,7 +1816,8 @@
     "    mutated_individual = list(individual)  # Convierte el individuo en una lista mutable\n",
     "    # Realiza la mutación en uno de los genes (por ejemplo, el primer gen)\n",
     "    mutated_individual[0] = random.choice(parametros[\"activacion\"])\n",
-    "    return tuple(mutated_individual)  # Convierte la lista de nuevo en una tupla\n"
+    "    return tuple(mutated_individual)  # Convierte la lista de nuevo en una tupla\n",
+    "\"\"\""
    ]
   },
   {
@@ -1825,7 +1826,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from deap import base, tools\n",
+    "\n",
     "\"\"\"\n",
     "# Define una función de mutación que maneje ambos tipos de valores\n",
     "def mutacion_mixta(individual, low, up, indpb):\n",
@@ -3106,8 +3107,8 @@
     "# Parámetros del algoritmo genético\n",
     "population_size = 10\n",
     "num_generations = 10\n",
-    "crossover_prob = 0.7\n",
-    "mutation_prob = 0.7\n",
+    "crossover_prob = 0.4\n",
+    "mutation_prob = 0.4\n",
     "\n",
     "# Crear una población inicial\n",
     "population = toolbox.population(n=population_size)\n",
